--- a/css/main.css
+++ b/css/main.css
@@ -48,8 +48,8 @@ visibility: hidden;
   height: auto;
 }
 .checkboxTop {
-  width: 40px;
-  height: 30px
+  width: 30px;
+  height: 30px;
 }
 .authorRow {
   width: 78%;
