--- a/css/media.css
+++ b/css/media.css
@@ -32,25 +32,27 @@ font-size: 12px;
 		display: block;	
 	}
 
-.imgNews {
-	display: none;
-}
-.velocityProduct {
-	background-image: none;
-	height: 22%;
-	width: auto;
-}
-.lastNews{
-	width: 100%;
-	margin-left: 0px;
-}
+	.imgNews {
+		display: none;
+	}
+
+	.velocityProduct {
+		background-image: none;
+		height: 22%;
+		width: auto;
+	}
+	.lastNews{
+		width: 100%;
+		margin-left: 0px;
+	}
 	.showRekl {
     display: block;  
-  }
+	}
 	#vote {
 		width: 100%;
 	}
-	.main_menu{
+	.
+	main_menu{
 		display: none;
 		position: absolute;
 		width: 100%;
