--- a/css/media.css
+++ b/css/media.css
@@ -25,6 +25,9 @@ font-size: 12px;
 }
 
 @media only screen and (max-width : 992px) {
+	.posterTXT {
+		font-size: 16px;
+	}
 	.showLarge {
 		display: none;	
 	}
