--- a/css/media.css
+++ b/css/media.css
@@ -25,6 +25,9 @@ font-size: 12px;
 }
 
 @media only screen and (max-width : 992px) {
+	.leftR {
+		margin: 0px;
+	}
 	.posterTXT {
 		font-size: 16px;
 	}
