--- a/css/media.css
+++ b/css/media.css
@@ -25,6 +25,10 @@ font-size: 12px;
 }
 
 @media only screen and (max-width : 992px) {
+	body {
+		margin-left: 0px;
+		margin-right:0px;
+	}
 	.leftR {
 		margin: 0px;
 	}
