--- a/css/main.css
+++ b/css/main.css
@@ -196,6 +196,10 @@ width: 80%;
 margin: 0 auto;
 font-size: 12px;
 }
+.insImgSize {
+  height: 50%;
+  width: auto;
+}
 
 .reklRand {
     border: 4px double red;
