--- a/css/media.css
+++ b/css/media.css
@@ -27,6 +27,10 @@ font-size: 12px;
 		margin-left: 0px;
 		margin-right:0px;
 	}
+	.webDrog{
+		height: 20px;
+		font-size: 15px;
+	}
 	.leftR {
 		margin: 0px;
 	}
@@ -37,6 +41,7 @@ font-size: 12px;
 		display: none;	
 	}
 	.showSmall {
+		height: 50px;
 		display: block;	
 	}
 
