--- a/css/media.css
+++ b/css/media.css
@@ -41,10 +41,14 @@ font-size: 12px;
 		display: none;	
 	}
 	.showSmall {
-		height: 50px;
-		display: block;	
+		display: block;
+		/*height: 50px;*/	
 	}
-
+	.showSmall1 {
+		height: 21%;
+		font-size: 18px;
+		/*padding-top: 20px;*/
+	}
 	.imgNews {
 		display: none;
 	}
