--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,14 @@ ul {
   list-style: none;
 }
 
+img[data-src] {
+    opacity: 0 !important;
+  }
+
+  img[src] {
+    opacity: 1 !important;
+  }
+
 [v-cloak] {
   display: none;
 }
