--- a/css/main.scss
+++ b/css/main.scss
@@ -269,7 +269,7 @@ border-radius: 10px;
 	border-radius: 20px;
 	padding-bottom: 5px;
 	font: bold italic 130% serif;
-	margin-top: 6px;
+	margin: 10px 0;
 	@media only screen and (max-width : 992px){
 		width: 100%;
 		margin-left: 0px;
@@ -587,4 +587,7 @@ border-radius: 10px;
 .datecurr{
 	padding-top:10px;
 	color:grey;
+}
+.posterMSG{
+	margin-bottom: 15px;
 }
