--- a/css/main.scss
+++ b/css/main.scss
@@ -315,6 +315,7 @@ border-radius: 10px;
 	border: 4px double red;
 	background-color: #fff;
 	margin: 20px 0;
+	padding: 0 10px;
 	&:hover {
 		background-color: $bcDelta11;
 		color: #fff!important;
