--- a/css/main.scss
+++ b/css/main.scss
@@ -417,6 +417,9 @@ border-radius: 10px;
 	@media only screen and (max-width : 992px){
 		padding: 0px;
 	}
+	ul {
+		line-height: 0.3;
+	}
 }
 
 .imgNews {
