--- a/css/main.scss
+++ b/css/main.scss
@@ -413,7 +413,7 @@ border-radius: 10px;
 	text-indent: 5%;
 	/* white-space:pre-line; */
 	width: 100%;
-	overflow-x: auto; 
+	/* overflow-x: auto; */ 
 	@media only screen and (max-width : 992px){
 		padding: 0px;
 	}
