--- a/css/main.scss
+++ b/css/main.scss
@@ -131,7 +131,7 @@ visibility: hidden;
 }
 
 .header_topline{
-	padding: 15px 0;
+	padding: 15px 0 0 0;
 	@media only screen and (max-width : 768px){
 		display: none;
 	}
