--- a/css/main.scss
+++ b/css/main.scss
@@ -131,15 +131,15 @@ visibility: hidden;
 }
 
 .header_topline{
-	padding: 15px 0 0 0;
+	margin-top: 15px;
 	@media only screen and (max-width : 768px){
 		display: none;
 	}
 }
 
-.header_topline a{
+/* .header_topline a{
 	color: #999;
-}
+} */
 
 .btn-delta11{
 	color:#fff;
@@ -186,6 +186,7 @@ background-color:#fff
 }
 
 .main_menu {
+	margin-top: 10px;
 margin-bottom: 20px;
 text-transform: uppercase;
 	@media only screen and (max-width : 992px){
@@ -310,6 +311,23 @@ border-radius: 10px;
   width: auto;
 }
 
+.reklRandHeader{
+	border: 4px double red;
+	background-color: #fff;
+	padding: 0 10px;
+	&:hover {
+		background-color: $bcDelta11;
+		color: #fff!important;
+	}	
+
+	a {
+		color: $colorRed;
+		&:hover {
+			background-color: $bcDelta11;
+			color: #fff!important;
+		}
+	}
+}
 .reklRand {
 	border: 4px double red;
 	background-color: #fff;
@@ -327,7 +345,6 @@ border-radius: 10px;
 			color: #fff!important;
 		}
 	}
-
 }
 
 .news_Tit{
@@ -560,11 +577,11 @@ border-radius: 10px;
  }
 
 .top_links {
-	display: inline-block;
+	/* display: inline-block;
 	vertical-align: middle;
-	z-index: 10;
+	z-index: 10; */
 	font-family: "NautilusPompiliusRegular";
-	float: right;
+	/* float: right; */
 	@media only screen and (max-width : 768px){
 		display: none;		
 	}
