--- a/css/main.scss
+++ b/css/main.scss
@@ -642,3 +642,9 @@ border-radius: 10px;
  .sl147_sinoptik {
  	margin-bottom: 20px;
  }
+ .sl147_polityka_p {
+ 	margin-left: 10px;
+ }
+ .sl147_polityka_ul {
+ 	margin-left: 65px;
+ }
