--- a/css/main.scss
+++ b/css/main.scss
@@ -394,7 +394,8 @@ border-radius: 10px;
 .showKursValut{
 	font-size: 12px;
 	width: 100%;
-	color: $colorMain;
+	color: #4ea522;
+	font-weight: 600;
 }
 
 .vote {
